[package]
name = "dyn-parse"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
kalosm = { version = "0.4.0", features = ["full"] }
regex = "1.11.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[lib]
name="dyn_parse"
path = "src/lib.rs"
